# ubirchONE-Test

./: .gitignore  CMakeLists.txt  README.md  config.cmake  config.h
sketches/ubirchONE_Test/: CMakeLists.txt  config.h  main.cpp  main.h
